--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,13 +23,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+#para agregar el icono de la app
+flutter_icons:
+  image_path: 'assets/img/icon.png'
+  android: true
+  ios: true
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.7.4
   flutter_test:
     sdk: flutter
 
@@ -45,9 +50,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/img/
+    - assets/img/social/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
