Login con Firebase Auth Google
Añadido login con google

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dev_dependencies:
   firebase_auth: ^1.2.0
   cloud_firestore: ^2.2.0
   firebase_storage: ^8.1.0
+  google_sign_in: ^5.0.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
