--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dev_dependencies:
   cloud_firestore: ^2.2.0
   firebase_storage: ^8.1.0
   google_sign_in: ^5.0.3
+  flutter_facebook_auth: ^3.4.0
   flutter_login_facebook: ^1.0.1
 
 # For information on the generic Dart part of this file, see the
