--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,10 +49,13 @@ dev_dependencies:
   flutter_login_facebook: ^1.0.1
   #api
   dio: ^4.0.0
+  bloc: ^7.0.0
   rxdart: ^0.27.0
   #desing
   flutter_rating_bar: ^4.0.0
+  page_indicator: ^0.4.1
   font_awesome_flutter: ^9.0.0
+  eva_icons_flutter: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
