--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dev_dependencies:
     sdk: flutter
   # Add the dependency for the Firebase Core Flutter SDK
   firebase_core: ^1.2.0
+  provider: ^5.0.0
   #firebase
   firebase_analytics: ^8.1.0
   firebase_auth: ^1.2.0
