--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,9 +47,8 @@ dev_dependencies:
   firebase_storage: ^8.1.0
   google_sign_in: ^5.0.3
   flutter_facebook_auth: ^3.4.0
-  flutter_login_facebook: ^1.0.1
   #camera
-  image_picker: ^0.7.5+3
+  image_picker: ^0.7.5
   #api
   dio: ^4.0.0
   bloc: ^7.0.0
