--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,12 +47,15 @@ dev_dependencies:
   firebase_storage: ^8.1.0
   google_sign_in: ^5.0.3
   flutter_facebook_auth: ^3.4.0
+  http: ^0.13.3
   #camera
   image_picker: ^0.7.5
   #api
   dio: ^4.0.0
-  bloc: ^7.0.0
+  bloc: ^4.0.0
   rxdart: ^0.27.0
+  equatable: ^2.0.2
+  flutter_bloc: ^4.0.1
   #desing
   flutter_rating_bar: ^4.0.0
   page_indicator: ^0.4.1
