--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dev_dependencies:
   image_picker: ^0.7.5
   #api
   dio: ^4.0.0
-  bloc: ^4.0.0
+  #bloc: ^4.0.0
   rxdart: ^0.27.0
   equatable: ^2.0.2
   flutter_bloc: ^4.0.1
